Removed leftover attempt to set column names

--- a/microsetta_interface/templates/new_results_page.jinja2
+++ b/microsetta_interface/templates/new_results_page.jinja2
@@ -76,16 +76,15 @@
                 },
                 columns: [
                     {
-                        name: "Relative Abundance",
                         data: "relativeAbundance",
                         render: $.fn.dataTable.render.number(',', '.', 4),
                     },
-                    {name: "Kingdom", data: "Kingdom"},
-                    {name: "Phylum", data: "Phylum"},
-                    {name: "Class", data: "Class"},
-                    {name: "Order", data: "Order"},
-                    {name: "Family", data: "Family"},
-                    {name: "Genus", data: "Genus"},
+                    {data: "Kingdom"},
+                    {data: "Phylum"},
+                    {data: "Class"},
+                    {data: "Order"},
+                    {data: "Family"},
+                    {data: "Genus"},
                 ],
                 order: [[ 0, "desc" ]],
                 dom: "Bfrtip",
