--- a/microsetta_interface/templates/new_results_page.jinja2
+++ b/microsetta_interface/templates/new_results_page.jinja2
@@ -30,6 +30,10 @@
 <script type="text/javascript" charset="utf8" src="/static/vendor/js/jquery.dataTables.js"></script>
 <script src="/static/vendor/DataTables/Buttons-1.6.2/js/dataTables.buttons.min.js"></script>
 <script src="/static/vendor/DataTables/Buttons-1.6.2/js/buttons.html5.min.js"></script>
+<!-- plotly must precede emperor imports as well.   I'm getting the feeling
+     that emperor doesn't know how to play nice. -->
+<script src='https://cdn.plot.ly/plotly-latest.min.js'></script>
+
 <script src="/static/vendor/emperor/vendor/js/require-2.1.22.min.js"></script>
 <script src="/static/vendor/emperor/emperor_loader.js"></script>
 
@@ -137,6 +141,32 @@
     }
     function updateTaxonomy(taxonomyData, state){
         // Seems taxonomy table is static for now?
+        var trace1 = {
+            "name": "Rank Distributions",
+            "showlegend": false,
+            "type": "violin",
+            "x": [1, 2, 3, 4, 5, 6, 7, 8, 9],
+            "y": ["A", "A", "A", "B", "B", "B", "C", "C", "C"],
+            "orientation": "h",
+            "box": {
+                "visible": true
+            },
+            "meanline": {
+                "visible": true
+            },
+        }
+        var trace2 = {
+            "type": "scatter",
+            "mode": "markers",
+            "name": "My Sample",
+            "x": [3, 5, 9],
+            "y": ["A", "B", "C"]
+        }
+        var data = [trace1, trace2]
+        var layout = {
+            "title": "Mock Violin"
+        }
+        Plotly.newPlot("taxa-violin", data, layout);
     }
 
     //Called immediately after a tab is shown
@@ -341,34 +371,49 @@
             </div>
           </div>
           <div class="tab-pane fade" id="taxonomy" role="tabpanel" aria-labelledby="taxonomy-tab">
-              <div class="column" style="text-align: center">
-                <h3> What is in your sample? </h3>
-                <br>
-                <p>The table below shows the relative abundances of all of the organisms we
-                observed in your sample. To produce this, we took the DNA sequences from
-                your sample, and compared them against publicly available annotated
-                reference databases. In some cases, a sequence may uniquely match a
-                database record, in other cases a sequence may match may different records.
-                To handle the uncertainty that can arise, we rely on a well used and
-                publicly available microbiome software package called <a
-                href="https://qiime2.org" target="_blank">QIIME 2</a>. The exact approach
-                taken is highlighted in the main tutorial on
-                <a href="https://docs.qiime2.org/2020.6/tutorials/moving-pictures/#taxonomic-analysis" target="_blank">feature-classification</a>.</p>
-                <div style="padding:10px">
-                  <table id="taxonomyTable" class="display" style="width:100%">
-                    <thead>
-                    <tr>
-                      <th>Relative Abundance</th>
-                      <th>Kingdom</th>
-                      <th>Phylum</th>
-                      <th>Class</th>
-                      <th>Order</th>
-                      <th>Family</th>
-                      <th>Genus</th>
-                    </tr>
-                    </thead>
-                  </table>
-                </div>
+              <div class="row">
+                  <div class="column" style="text-align: center">
+                    <h3> What is in your sample? </h3>
+                    <br>
+                    <p>The table below shows the relative abundances of all of the organisms we
+                    observed in your sample. To produce this, we took the DNA sequences from
+                    your sample, and compared them against publicly available annotated
+                    reference databases. In some cases, a sequence may uniquely match a
+                    database record, in other cases a sequence may match may different records.
+                    To handle the uncertainty that can arise, we rely on a well used and
+                    publicly available microbiome software package called <a
+                    href="https://qiime2.org" target="_blank">QIIME 2</a>. The exact approach
+                    taken is highlighted in the main tutorial on
+                    <a href="https://docs.qiime2.org/2020.6/tutorials/moving-pictures/#taxonomic-analysis" target="_blank">feature-classification</a>.</p>
+                    <div style="padding:10px">
+                      <table id="taxonomyTable" class="display" style="width:100%">
+                        <thead>
+                        <tr>
+                          <th>Relative Abundance</th>
+                          <th>Kingdom</th>
+                          <th>Phylum</th>
+                          <th>Class</th>
+                          <th>Order</th>
+                          <th>Family</th>
+                          <th>Genus</th>
+                        </tr>
+                        </thead>
+                      </table>
+                    </div>
+                  </div>
+              </div>
+              <hr/>
+              <div class="row">
+                  <div class="column" style="text-align: center">
+                    <p>
+                    In the plot below, you can see the most commonly observed
+                    microbial genera in the dataset, and distribution of ranks of
+                    those genera.  For example, TOP_RANKED_GENUS_FROM_PLOT
+                    typically has the highest relative abundance of samples in the
+                    dataset.
+                    </p>
+                  </div>
+              <div id="taxa-violin">
               </div>
           </div>
         </div>
