--- a/microsetta_interface/templates/new_results_page.jinja2
+++ b/microsetta_interface/templates/new_results_page.jinja2
@@ -23,13 +23,13 @@
 </style>
 
 <script type="text/javascript" language="javascript" src="/static/js/ruleset.js"></script>
-<script src="/static/vendor/js/vega@5"></script>
-<script src="/static/vendor/js/vega-lite@4"></script>
-<script src="/static/vendor/js/vega-embed@6"></script>
 <!-- Datatables must precede emperor imports, they don't play nice with each other. -->
 <script type="text/javascript" charset="utf8" src="/static/vendor/js/jquery.dataTables.js"></script>
 <script src="/static/vendor/DataTables/Buttons-1.6.2/js/dataTables.buttons.min.js"></script>
 <script src="/static/vendor/DataTables/Buttons-1.6.2/js/buttons.html5.min.js"></script>
+<!-- plotly must precede emperor imports as well.   I'm getting the feeling
+     that emperor doesn't know how to play nice. -->
+<script src='https://cdn.plot.ly/plotly-latest.min.js'></script>
 <script src="/static/vendor/emperor/vendor/js/require-2.1.22.min.js"></script>
 <script src="/static/vendor/emperor/emperor_loader.js"></script>
 
@@ -112,12 +112,61 @@
         $("#age_nearest_neighbor").text("AJAX_AGE_NEAREST_NEIGHBOR")
         $("#more_or_less_sweets_nearest_neighbor").text("AJAX_MORE_OR_LESS_SWEETS_NEAREST_NEIGHBOR")
     }
-    function updateDiversity(diversityData, state){
-        if (diversityData == null) {
-            $("#diversity_vis").empty()
-            return;
+    function updateDiversity(state){
+        //https://www-dev.ucsd.edu/results-api/diversity/alpha/group/faith_pd?summary_statistics=true
+
+        queries = []
+        countries = ["USA", "United Kingdom"];
+        for (country of countries){
+            var query = $.ajax(
+            {
+                url: state.public_endpoint + "/diversity/alpha/group/" +
+                     state.alpha_metric + "?" + $.param({summary_statistics: true}),
+                method: "POST",
+                data: JSON.stringify(
+                {
+                    "metadata_query":
+                    {
+                        "condition": "OR",
+                        "rules":
+                        [
+                            {
+                                "id": "country",
+                                "operator": "equal",
+                                "value": country
+                            }
+                        ]
+                    }
+                }),
+                contentType: "application/json"
+            })
+            queries.push(query)
         }
-        vegaEmbed("#diversity-vis", diversityData, state.vega_options);
+
+        $.when.apply($, queries).done(function(){
+            var traces = []
+            for (var i = 0; i < countries.length; i++)
+            {
+                var country = countries[i]
+                var alpha_summary = arguments[i][0]
+
+                var fill = "tozeroy"
+                if (i > 0)
+                    fill = "tozeroy"
+                var trace = {
+                    name: countries[i],
+                    x: alpha_summary.group_summary.percentile_values,
+                    y: alpha_summary.group_summary.percentile,
+                    fill: fill
+                }
+                traces.push(trace)
+            }
+
+            layout = {
+                title: "Faith PD by Country"
+            }
+            Plotly.newPlot("diversity-vis", traces)
+        })
     }
     function updateSimilarity(similarityData, state){
         if (similarityData == null){
@@ -191,7 +240,6 @@
         // DONT MERGE WITH FAKE BARCODE HERE.
         state.sample_id = "000023984"; // "{{sample.sample_barcode}}";
         state.barcode_prefix = "{{barcode_prefix}}";
-        state.vega_options = {"renderer": "canvas", "actions": true};  /* Options for the Vega embedding */
         state.public_endpoint = "{{public_endpoint}}";
         var sample_type = "oral"
         if ("{{sample.sample_site}}" == "Stool")
@@ -206,17 +254,9 @@
         new DelegateOutput(function(dataType, dataset){
             //TODO: Decide how to tell each control it is waiting on ajax data
             updateCompare(null, state)
-            updateDiversity(null, state)
+            updateDiversity(state)
             updateSimilarity(null, state)
             updateTaxonomy(null, state)
-
-            //TODO Insert some calls to ajax, grab the result, -then- update
-            //    ...
-            $.ajax({
-                url: formatAlphaURL(state),
-                type: "GET",
-                success: function(data){ updateDiversity(data, state); }
-            });
 
             compareData = { "result": "Compare AJAX: " + dataType + " - " + dataset }
             diversityData = { "result": "Diversity AJAX: " + dataType + " - " + dataset }
@@ -224,7 +264,6 @@
             taxonomyData = { "result": "Taxonomy AJAX: " + dataType + " - " + dataset }
 
             updateCompare(compareData, state);
-            updateDiversity(diversityData, state);
             updateSimilarity(similarityData, state);
             updateTaxonomy(taxonomyData, state);
         }, state.data_type_input, state.dataset_input);
